fix(layout) overflow fix

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -38,4 +38,5 @@ main {
     flex: 1;
     background: #fafafa;
     padding: 0.5em 1em;
+    overflow: auto;
 }
